--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -173,7 +173,7 @@
     "             x='station_name',\n",
     "             y='passanger_cnt',\n",
     "             color='day_of_week',\n",
-    "             title=f'Number of Passagers for Each Day for Week ({min_date} - {max_date}) by Stations')\n",
+    "             title=f'Number of Passangers for Each Day for Week ({min_date} - {max_date}) by Stations')\n",
     "fig.show()"
    ]
   },
@@ -208,7 +208,7 @@
     "fig = px.bar(age_stations_frame[age_stations_frame['age'] == '20-30'],\n",
     "             x='station_name',\n",
     "             y='passanger_cnt',\n",
-    "             title='Number of Passagers by Stations for Age Group (20-30)')\n",
+    "             title='Number of Passangers by Stations for Age Group (20-30)')\n",
     "fig.show()"
    ]
   },
